--- a/index.html
+++ b/index.html
@@ -1189,6 +1189,9 @@
         }
 
         @media (max-width: 768px) {
+            .nav{
+                margin-top:30px;
+            }
             .nav-links {
                 position: fixed;
                 top: 80px;
@@ -1973,3 +1976,4 @@
 
 
 </html>
+
