--- a/index.html
+++ b/index.html
@@ -1189,9 +1189,10 @@
         }
 
         @media (max-width: 768px) {
-            .nav{
-                margin-top:30px;
+           .hero {
+                margin-top: 50px;
             }
+
             .nav-links {
                 position: fixed;
                 top: 80px;
@@ -1976,4 +1977,5 @@
 
 
 </html>
+
 
